--- a/.github/workflows/contoso-traders-load-testing.yml
+++ b/.github/workflows/contoso-traders-load-testing.yml
@@ -66,6 +66,8 @@ jobs:
     steps:
       - name: checkout code
         uses: actions/checkout@v3
+        with:
+          repository: microsoft/contosotraders
       - name: azure login
         uses: azure/login@v1
         with:
