--- a/.github/workflows/contoso-traders-playwright.yml
+++ b/.github/workflows/contoso-traders-playwright.yml
@@ -1,9 +1,10 @@
-name: Playwright Tests
+name: contoso-traders-playwright
+
 on:
+  workflow_dispatch:
   push:
-    branches: [main, master]
-  pull_request:
-    branches: [main, master]
+    branches: [main]
+
 jobs:
   test:
     timeout-minutes: 60
@@ -13,6 +14,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: microsoft/contosotraders
+          ref: mithun/playwright
       - name: install node
         uses: actions/setup-node@v3
         with:
