--- a/.github/workflows/contoso-traders-playwright.yml
+++ b/.github/workflows/contoso-traders-playwright.yml
@@ -32,5 +32,5 @@ jobs:
         if: always()
         with:
           name: playwright-report
-          path: playwright-report/
+          path: src/ContosoTraders.Ui.Website/playwright-report/
           retention-days: 30
