npm update playwright

--- a/src/ContosoTraders.Ui.Website/.gitignore
+++ b/src/ContosoTraders.Ui.Website/.gitignore
@@ -24,3 +24,6 @@ appsettings.Development.json
 /test-results/
 /playwright-report/
 /playwright/.cache/
+/test-results/
+/playwright-report/
+/playwright/.cache/
