--- a/.github/workflows/contoso-traders-playwright-testing.yml
+++ b/.github/workflows/contoso-traders-playwright-testing.yml
@@ -5,6 +5,9 @@ on:
   push:
     branches: [main]
 
+env:
+  KV_NAME: contosotraderskv
+
 jobs:
   run-playwright-tests:
     timeout-minutes: 60
@@ -12,6 +15,29 @@ jobs:
     steps:
       - name: checkout code
         uses: actions/checkout@v3
+      - name: azure login
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.SERVICEPRINCIPAL }}
+      - name: get carts api endpoint
+        uses: azure/CLI@v1
+        id: get-cartsApiEndpoint
+        with:
+          inlineScript: echo "cartsApiEndpoint"="$(az keyvault secret show --vault-name ${{ env.KV_NAME }}${{ secrets.ENVIRONMENT }} --name cartsApiEndpoint --query value -o tsv)" >> $GITHUB_OUTPUT
+      - name: get products api endpoint
+        uses: azure/CLI@v1
+        id: get-productsApiEndpoint
+        with:
+          inlineScript: echo "productsApiEndpoint"="$(az keyvault secret show --vault-name ${{ env.KV_NAME }}${{ secrets.ENVIRONMENT }} --name productsApiEndpoint --query value -o tsv)" >> $GITHUB_OUTPUT
+      - name: substitute tokens in ui configuration
+        uses: cschleiden/replace-tokens@v1.2
+        with:
+          tokenPrefix: "{{"
+          tokenSuffix: "}}"
+          files: ./src/ContosoTraders.Ui.Website/.env
+        env:
+          CARTS_API_ENDPOINT: ${{ steps.get-cartsApiEndpoint.outputs.cartsApiEndpoint }}
+          PRODUCTS_API_ENDPOINT: ${{ steps.get-productsApiEndpoint.outputs.productsApiEndpoint }}
       - name: install node
         uses: actions/setup-node@v3
         with:
