--- a/tests/loadtests/contoso-traders-products.yaml
+++ b/tests/loadtests/contoso-traders-products.yaml
@@ -1,4 +1,7 @@
 testName: contoso-traders-products
 testPlan: contoso-traders-products.jmx
-description: 
+description:
 engineInstances: 1
+failureCriteria:
+  - avg(response_time_ms) > 5000
+  - percentage(error) > 20
