--- a/.github/workflows/contoso-traders-provisioning-deployment.yml
+++ b/.github/workflows/contoso-traders-provisioning-deployment.yml
@@ -302,7 +302,7 @@ jobs:
 
   deploy-ui:
     runs-on: ubuntu-latest
-    needs: [playwright-tests-ui]
+    needs: [deploy-carts-api, deploy-products-api]
     steps:
       - name: checkout code
         uses: actions/checkout@v3
@@ -449,7 +449,7 @@ jobs:
   playwright-tests-ui:
     timeout-minutes: 10
     runs-on: ubuntu-latest
-    needs: [deploy-carts-api, deploy-products-api]
+    needs: [deploy-ui]
     steps:
       - name: checkout code
         uses: actions/checkout@v3
