--- a/src/ContosoTraders.Ui.Website/.env
+++ b/src/ContosoTraders.Ui.Website/.env
@@ -1,6 +1,6 @@
 REACT_APP_APIUrl = 'https://{{PRODUCTS_API_ENDPOINT}}/v1'
 REACT_APP_APIUrlShoppingCart = 'https://{{CARTS_API_ENDPOINT}}/v1'
-REACT_APP_BaseUrlForPlaywrightTesting = 'http://localhost:3000'
+REACT_APP_BaseUrlForPlaywrightTesting = 'https://{{UI_CDN_ENDPOINT}}'
 REACT_APP_USEB2C = ''
 REACT_APP_B2CAUTHORITY = 'https://login.microsoftonline.com/common'
 REACT_APP_B2CCLIENTID = '9db8d08a-d9b6-4e4c-8b46-a3898f985735'
