--- a/.github/workflows/playwright-test.yml
+++ b/.github/workflows/playwright-test.yml
@@ -94,29 +94,31 @@ jobs:
   playwright-tests-ui:
     timeout-minutes: 10
     runs-on: ubuntu-latest
+    container:
+      image: mcr.microsoft.com/playwright:v1.29.0-focal
     needs: [deploy-ui]
     steps:
       - name: checkout code
         uses: actions/checkout@v3
-      - name: azure login
-        uses: azure/login@v1
-        with:
-          creds: ${{ secrets.SERVICEPRINCIPAL }}
+      # - name: azure login
+      #   uses: azure/login@v1
+      #   with:
+      #     creds: ${{ secrets.SERVICEPRINCIPAL }}
       - name: download .env file from run artifacts
         uses: actions/download-artifact@v3
         with:
           name: .env
           path: ./src/ContosoTraders.Ui.Website/
-      - name: install node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 16
+      # - name: install node
+      #   uses: actions/setup-node@v3
+      #   with:
+      #     node-version: 16
       - name: install dependencies
         run: npm ci
         working-directory: src/ContosoTraders.Ui.Website
-      - name: install playwright browsers
-        run: npx playwright install --with-deps
-        working-directory: src/ContosoTraders.Ui.Website
+      # - name: install playwright browsers
+      #   run: npx playwright install --with-deps
+      #   working-directory: src/ContosoTraders.Ui.Website
       - name: run playwright tests
         run: npx playwright test
         working-directory: src/ContosoTraders.Ui.Website
