--- a/.github/workflows/contoso-traders-provisioning-deployment.yml
+++ b/.github/workflows/contoso-traders-provisioning-deployment.yml
@@ -462,31 +462,24 @@ jobs:
   playwright-tests-ui:
     timeout-minutes: 10
     runs-on: ubuntu-latest
+    container:
+      image: mcr.microsoft.com/playwright:v1.29.1-focal
     needs: [deploy-ui]
     steps:
       - name: checkout code
         uses: actions/checkout@v3
-      - name: azure login
-        uses: azure/login@v1
-        with:
-          creds: ${{ secrets.SERVICEPRINCIPAL }}
       - name: download .env file from run artifacts
         uses: actions/download-artifact@v3
         with:
           name: .env
           path: ./src/ContosoTraders.Ui.Website/
-      - name: install node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 16
       - name: install dependencies
         run: npm ci
         working-directory: src/ContosoTraders.Ui.Website
-      - name: install playwright browsers
-        run: npx playwright install --with-deps
-        working-directory: src/ContosoTraders.Ui.Website
+      # Note: The 'HOME=/root' prefix is required to workaround below mentioned issue:
+      # https://github.com/microsoft/playwright/issues/6500
       - name: run playwright tests
-        run: npx playwright test
+        run: HOME=/root npx playwright test
         working-directory: src/ContosoTraders.Ui.Website
       - name: upload playwright report
         uses: actions/upload-artifact@v3
