--- a/src/ContosoTraders.Ui.Website/.env
+++ b/src/ContosoTraders.Ui.Website/.env
@@ -5,3 +5,6 @@ REACT_APP_USEB2C = ''
 REACT_APP_B2CAUTHORITY = 'https://login.microsoftonline.com/common'
 REACT_APP_B2CCLIENTID = '9db8d08a-d9b6-4e4c-8b46-a3898f985735'
 REACT_APP_B2CSCOPES = "User.Read"
+REACT_APP_BingMapsKey = 'AkLj1p_g1w7lFb8lJZ-XnicObnu2-ydEpmn6eryraluxl_x3bDo0Jx6w58b7ZJt2'
+REACT_APP_GeolocationAPI = 'https://geolocation-db.com/json/8d382830-904e-11ed-97d5-0de223189653'
+REACT_APP_GeoApiBaseURL = 'https://dev.virtualearth.net/REST/v1'
