--- a/.github/workflows/contoso-traders-provisioning-deployment.yml
+++ b/.github/workflows/contoso-traders-provisioning-deployment.yml
@@ -25,6 +25,7 @@ env:
   AKS_SECRET_NAME_MI_CLIENTID: contoso-traders-mi-clientid
   CARTS_ACA_NAME: contoso-traders-carts
   CARTS_ACR_REPOSITORY_NAME: contosotradersapicarts
+  CARTS_INTERNAL_ACA_NAME: contoso-traders-intcarts
   CDN_PROFILE_NAME: contoso-traders-cdn
   KV_NAME: contosotraderskv
   LOAD_TEST_SERVICE_NAME: contoso-traders-loadtest
@@ -147,6 +148,12 @@ jobs:
           inlineScript: |
             az config set extension.use_dynamic_install=yes_without_prompt
             az containerapp update -n ${{ env.CARTS_ACA_NAME }}${{ secrets.ENVIRONMENT }} -g ${{ env.RESOURCE_GROUP_NAME }} --image ${{ env.ACR_NAME }}${{ secrets.ENVIRONMENT }}.azurecr.io/${{ env.CARTS_ACR_REPOSITORY_NAME }}:${{ github.sha }}
+      - name: deploy to aca (internal)
+        uses: azure/CLI@v1
+        with:
+          inlineScript: |
+            az config set extension.use_dynamic_install=yes_without_prompt
+            az containerapp update -n ${{ env.CARTS_INTERNAL_ACA_NAME }}${{ secrets.ENVIRONMENT }} -g ${{ env.RESOURCE_GROUP_NAME }} --image ${{ env.ACR_NAME }}${{ secrets.ENVIRONMENT }}.azurecr.io/${{ env.CARTS_ACR_REPOSITORY_NAME }}:${{ github.sha }}
 
   deploy-products-api:
     runs-on: ubuntu-latest
@@ -388,6 +395,69 @@ jobs:
               {
                 "name": "domain",
                 "value": "${{ steps.fetch-cartsApiEndpoint.outputs.cartsApiEndpoint }}"
+              },
+              {
+                "name": "protocol",
+                "value": "https"
+              },
+              {
+                "name": "path",
+                "value": "v1/ShoppingCart/loadtest"
+              },
+              {
+                "name": "threads_per_engine",
+                "value": "5"
+              },
+              {
+                "name": "ramp_up_time",
+                "value": "0"
+              },
+              {
+                "name": "duration_in_sec",
+                "value": "120"
+              }
+            ]
+
+  load-tests-carts-internal-api:
+    runs-on: ubuntu-latest
+    needs: [deploy-carts-api]
+    steps:
+      - name: checkout code
+        uses: actions/checkout@v3
+      - name: azure login
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.SERVICEPRINCIPAL }}
+      - name: fetch cartsInternalApiEndpoint
+        uses: azure/CLI@v1
+        id: fetch-cartsInternalApiEndpoint
+        with:
+          inlineScript: echo "cartsInternalApiEndpoint"="$(az keyvault secret show --vault-name ${{ env.KV_NAME }}${{ secrets.ENVIRONMENT }} -n cartsInternalApiEndpoint --query "value" -o tsv)" >> $GITHUB_OUTPUT
+      - name: fetch vnetAcaSubnetId
+        uses: azure/CLI@v1
+        id: fetch-vnetAcaSubnetId
+        with:
+          inlineScript: echo "vnetAcaSubnetId"="$(az keyvault secret show --vault-name ${{ env.KV_NAME }}${{ secrets.ENVIRONMENT }} -n vnetAcaSubnetId --query "value" -o tsv)" >> $GITHUB_OUTPUT
+      - name: substitute tokens in load test config file
+        uses: cschleiden/replace-tokens@v1.2
+        with:
+          tokenPrefix: "{{"
+          tokenSuffix: "}}"
+          files: ./tests/loadtests/contoso-traders-carts-internal.yaml
+        env:
+          LOAD_TEST_SUBNET_ID: ${{ steps.fetch-vnetAcaSubnetId.outputs.vnetAcaSubnetId }}
+      - name: load test (carts internal API)
+        uses: Azure/load-testing@v1.1.9
+        with:
+          # Path of the YAML file. Should be fully qualified path or relative to the default working directory
+          loadtestConfigFile: ./tests/loadtests/contoso-traders-carts-internal.yaml
+          loadtestResource: ${{ env.LOAD_TEST_SERVICE_NAME }}${{ secrets.ENVIRONMENT }}
+          resourceGroup: ${{ env.RESOURCE_GROUP_NAME }}
+          env: |
+            [
+              {
+                "name": "domain",
+                "value": "${{ steps.fetch-cartsInternalApiEndpoint.outputs.cartsInternalApiEndpoint }}"
               },
               {
                 "name": "protocol",
