--- a/.github/workflows/contoso-traders-provisioning-deployment.yml
+++ b/.github/workflows/contoso-traders-provisioning-deployment.yml
@@ -47,6 +47,9 @@ env:
 jobs:
   provision-infrastructure:
     runs-on: ubuntu-latest
+    concurrency:
+      group: provision-infrastructure
+      cancel-in-progress: true
     steps:
       - name: checkout code
         uses: actions/checkout@v3
@@ -120,6 +123,9 @@ jobs:
   deploy-carts-api:
     runs-on: ubuntu-latest
     needs: provision-infrastructure
+    concurrency:
+      group: deploy-carts-api
+      cancel-in-progress: true
     steps:
       - name: checkout code
         uses: actions/checkout@v3
@@ -158,6 +164,9 @@ jobs:
   deploy-products-api:
     runs-on: ubuntu-latest
     needs: provision-infrastructure
+    concurrency:
+      group: deploy-products-api
+      cancel-in-progress: true
     steps:
       - name: checkout code
         uses: actions/checkout@v3
@@ -315,6 +324,9 @@ jobs:
   deploy-ui:
     runs-on: ubuntu-latest
     needs: [deploy-carts-api, deploy-products-api]
+    concurrency:
+      group: deploy-ui
+      cancel-in-progress: true
     steps:
       - name: checkout code
         uses: actions/checkout@v3
@@ -370,6 +382,9 @@ jobs:
   load-tests-carts-api:
     runs-on: ubuntu-latest
     needs: [deploy-carts-api]
+    concurrency:
+      group: load-tests-carts-api
+      cancel-in-progress: true
     steps:
       - name: checkout code
         uses: actions/checkout@v3
@@ -421,6 +436,9 @@ jobs:
   load-tests-carts-internal-api:
     runs-on: ubuntu-latest
     needs: [deploy-carts-api]
+    concurrency:
+      group: load-tests-carts-internal-api
+      cancel-in-progress: true
     steps:
       - name: checkout code
         uses: actions/checkout@v3
@@ -484,6 +502,9 @@ jobs:
   load-tests-products-api:
     runs-on: ubuntu-latest
     needs: [deploy-products-api]
+    concurrency:
+      group: load-tests-products-api
+      cancel-in-progress: true
     steps:
       - name: checkout code
         uses: actions/checkout@v3
@@ -538,6 +559,9 @@ jobs:
     container:
       image: mcr.microsoft.com/playwright:v1.29.1-focal
     needs: [deploy-ui]
+    concurrency:
+      group: playwright-tests-ui
+      cancel-in-progress: true
     steps:
       - name: checkout code
         uses: actions/checkout@v3
