add junit reporter w/ GHA summary

--- a/.github/workflows/contoso-traders-cloud-testing.yml
+++ b/.github/workflows/contoso-traders-cloud-testing.yml
@@ -580,6 +580,11 @@ jobs:
       - name: run playwright tests
         run: HOME=/root npx playwright test
         working-directory: src/ContosoTraders.Ui.Website
+      - name: Create test summary
+        uses: test-summary/action@dist
+        if: always()
+        with:
+          paths: src/ContosoTraders.Ui.Website/test-results/junit.xml      
       - name: upload playwright report
         uses: actions/upload-artifact@v3
         if: always()
