--- a/src/ContosoTraders.Api.Products/Manifests/Deployment.yaml
+++ b/src/ContosoTraders.Api.Products/Manifests/Deployment.yaml
@@ -16,7 +16,7 @@ spec:
         "kubernetes.io/os": linux
       containers:
         - name: contoso-traders-products
-          #Note: The '{ENVIRONMENT}' token will be substituted with the value of the ENVIRONMENT github secret by github workflow.
+          #Note: The '{ENVIRONMENT}' token will be substituted with the value of the ENVIRONMENT github variable by github workflow.
           image: contosotradersacr{ENVIRONMENT}.azurecr.io/contosotradersapiproducts:latest
           env:
             - name: KeyVaultEndpoint
