update TS rules

--- a/src/ContosoTraders.Ui.Website/package.json
+++ b/src/ContosoTraders.Ui.Website/package.json
@@ -66,6 +66,7 @@
   ],
   "devDependencies": {
     "@playwright/test": "^1.28.1",
+    "@types/node": "^18.11.18",
     "babel-plugin-macros": "^2.8.0"
   }
 }
