--- a/src/ContosoTraders.Ui.Website/package.json
+++ b/src/ContosoTraders.Ui.Website/package.json
@@ -67,6 +67,7 @@
   "devDependencies": {
     "@playwright/test": "^1.28.1",
     "@types/node": "^18.11.18",
-    "babel-plugin-macros": "^2.8.0"
+    "babel-plugin-macros": "^2.8.0",
+    "typescript": "^4.9.4"
   }
 }
