Don't trigger on doc updates

--- a/.github/workflows/contoso-traders-cloud-testing.yml
+++ b/.github/workflows/contoso-traders-cloud-testing.yml
@@ -3,7 +3,8 @@ name: contoso-traders-cloud-testing
 on:
   workflow_dispatch:
   push:
-    branches: ["main"]
+    branches: ["main"] 
+    paths-ignore: 'docs/**'
   pull_request:
     branches: ["main"]
 
