--- a/src/ContosoTraders.Ui.Website/package.json
+++ b/src/ContosoTraders.Ui.Website/package.json
@@ -50,8 +50,8 @@
     "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "react-scripts --max_old_space_size=8000 start",
-    "build": "react-scripts --max_old_space_size=8000 build",
+    "start": "export NODE_OPTIONS=--openssl-legacy-provider && react-scripts --max_old_space_size=8000 start",
+    "build": "export NODE_OPTIONS=--openssl-legacy-provider && react-scripts --max_old_space_size=8000 build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
