--- a/src/ContosoTraders.Ui.Website/package.json
+++ b/src/ContosoTraders.Ui.Website/package.json
@@ -16,6 +16,9 @@
     "@fluentui/react": "^7.170.0",
     "@microsoft/applicationinsights-react-js": "^2.5.4",
     "@microsoft/applicationinsights-web": "^2.6.2",
+    "@mui/lab": "^5.0.0-alpha.117",
+    "@mui/material": "^5.11.6",
+    "@mui/styles": "^5.11.2",
     "axios": "^0.21.4",
     "date-fns": "^2.0.0-beta.5",
     "dotenv": "^8.6.0",
